kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uncanvas
  labels:
    name: uncanvas
